--- a/SASS/components/_story.scss
+++ b/SASS/components/_story.scss
@@ -1,71 +1,70 @@
 .story{
-    width: 65%;
-    margin: 0 auto;
-    box-shadow: 0 3rem 6rem rgba($color-black, .1);
-background-color: $color-white;
+width: 65%;     //
+margin: 0 auto;
+box-shadow: 0 3rem 6rem rgba($color-black, .1);
+background-color: rgba($color-white, .6);
 border-radius: 3px;
 padding: 6rem;
-padding-right: 9rem;
-padding-left: 9rem;
+//padding-left: 9rem;   //
 font-size: $default-font-size;
 transform: skewX(-12deg);
-backface-visibility: hidden;
-
-// & > *{
-// transform: skewX(12deg);
-// }    it works because your image wasnt translated
-
+will-change: 1;
+will-change: contents;  //sloves image jitter
 
 &__shape{
-    width: 15rem;
-    height: 15rem;
-    float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside:circle(50% at 50% 50%) ;    //to shape a paragraph in a shape
+width: 15rem;
+height: 15rem;
+float: left;
 
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path:circle(50% at 50% 50%) ;
+-webkit-shape-outside: circle(50% at 50% 50%);
+shape-outside: circle(50% at 50% 50%);
+transform: skewX(12deg);   //
+overflow: hidden;
+position: relative;
 
-    transform: translate(-3rem) skewX(12deg);
-    position:relative;
-   
+-webkit-clip-path: circle(50% at 50% 50%);
+clip-path: circle(50% at 50% 50%);
 }
 
 &__img{
-    height: 100%;
-    transform: translateX(-4rem) scale(1.4);
-    transition: all .3s;
-    backface-visibility: hidden;
-   
+height: 100%;
+transform: translateX(-4rem) scale(1.4);
+transition: all .5s;
+backface-visibility: hidden;
+
 }
 
 &__text{
-    padding-left: 4rem;
-    transform: skewX(12deg);
-    
+transform: skewX(12deg) translateZ(0);
+
+    backface-visibility: hidden;
+
 }
 
 &__caption{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,20%);
-    color: $color-white;
-    text-transform: uppercase;
-    font-size: 1.7rem;
-    text-align: center;
-    opacity: 0;
-    transition: all .5s;
-    backface-visibility: hidden;
-
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, 150%);
+color: $color-white;
+text-transform: uppercase;
+font-size: 1.7rem;
+text-align: center;
+transition: all .5s;
+backface-visibility: hidden;
 }
 
 &:hover &__caption{
     opacity: 1;
-    transform: translate(-50%,-50%)
+    transform: translate(-50%, -50%);  //
 }
 
-&:hover &__img {
-filter:blur(3px) brightness(80%);
-} 
+&:hover &__img{
+transform: translateX(-4rem) scale(1);
+filter: blur(3px) brightness(80%);
+}
+
+
+
+
 }
