--- a/SASS/pages/_home.scss
+++ b/SASS/pages/_home.scss
@@ -22,11 +22,12 @@
     background-color: $color-grey-light-1;
         padding: 25rem 10rem 15rem;
         margin-top: -10rem;
+ 
 }
 
 .section-stories{
     margin-top: -10rem;
     padding: 15rem 0;
-    background-color: $color-grey-light-1;
-    backface-visibility: hidden;
+    position: relative;
+   
 }
